--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
         "pusher-js": "^8.3.0",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "chart.js": "^4.4.0"
     }
 }
